--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14087.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BPF-CG-GQP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BPF-CG-GQP">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14075.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -187,6 +187,41 @@
             </objects>
             <point key="canvasLocation" x="374" y="1238"/>
         </scene>
+        <!--Explore Events Collection View Controller-->
+        <scene sceneID="gVB-Pm-0CT">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ctd-Cl-lKW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <collectionViewController id="Eit-Pu-OAt" customClass="ExploreEventsCollectionViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Xdc-1W-dGg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Mva-C7-ns1">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZbK-QA-5Zi" customClass="ExploreEventCollectionViewCell" customModule="LynxApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="Eit-Pu-OAt" id="6hb-jq-nMr"/>
+                            <outlet property="delegate" destination="Eit-Pu-OAt" id="GW6-U3-7r1"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="qX6-m2-PUK" customClass="ExploreEventsCollectionViewController"/>
+                </collectionViewController>
+            </objects>
+            <point key="canvasLocation" x="3762" y="245"/>
+        </scene>
         <!--Active Events Table View Controller-->
         <scene sceneID="0YY-iO-Wgr">
             <objects>
@@ -241,7 +276,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pWF-Hr-aSK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2891.5" y="246.5"/>
+            <point key="canvasLocation" x="4638" y="245"/>
         </scene>
         <!--User Events Table View Controller-->
         <scene sceneID="4Zl-Fa-evy">
@@ -579,7 +614,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r43-NK-JBm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3866.666666666667" y="364.4021739130435"/>
+            <point key="canvasLocation" x="5639" y="245"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="e8p-DK-Lol">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Eh1-X5-qo1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="I8G-ej-9nf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IRR-93-5p4">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Eit-Pu-OAt" kind="relationship" relationship="rootViewController" id="d20-gA-FgB"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="2891" y="245"/>
         </scene>
     </scenes>
     <resources>
