--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -17,12 +17,11 @@
             <objects>
                 <viewController storyboardIdentifier="menuViewController" automaticallyAdjustsScrollViewInsets="NO" id="dii-J3-FAH" customClass="MenuViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3vi-AD-TOI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="692"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mz8-2O-hg6">
-                                <rect key="frame" x="0.0" y="101" width="414" height="603"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mz8-2O-hg6">
+                                <rect key="frame" x="0.0" y="65" width="414" height="627"/>
                                 <connections>
                                     <segue destination="Lah-Zs-4j4" kind="embed" id="C4v-Hc-L5H"/>
                                 </connections>
@@ -67,20 +66,25 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="mz8-2O-hg6" firstAttribute="top" secondItem="g2S-yD-DKD" secondAttribute="bottom" constant="10" id="4hW-Hh-6Gl"/>
                             <constraint firstItem="wTs-JB-7xp" firstAttribute="top" secondItem="3vi-AD-TOI" secondAttribute="top" constant="26" id="Db5-2g-yNq"/>
+                            <constraint firstItem="mz8-2O-hg6" firstAttribute="trailing" secondItem="CiE-wu-fuP" secondAttribute="trailing" id="MWB-q1-aYw"/>
                             <constraint firstItem="Pso-UO-8B3" firstAttribute="top" secondItem="CiE-wu-fuP" secondAttribute="top" constant="9" id="O59-4j-qha"/>
                             <constraint firstItem="g2S-yD-DKD" firstAttribute="leading" secondItem="S0n-zc-Gz9" secondAttribute="trailing" constant="25" id="R1L-Xd-F6k"/>
                             <constraint firstItem="Pso-UO-8B3" firstAttribute="leading" secondItem="wTs-JB-7xp" secondAttribute="trailing" constant="39" id="S1V-AM-ib6"/>
                             <constraint firstItem="pXE-bB-kqQ" firstAttribute="leading" secondItem="CiE-wu-fuP" secondAttribute="leading" id="XNz-rT-zdg"/>
+                            <constraint firstItem="mz8-2O-hg6" firstAttribute="leading" secondItem="CiE-wu-fuP" secondAttribute="leading" id="Xxa-Ya-jdo"/>
                             <constraint firstItem="pXE-bB-kqQ" firstAttribute="trailing" secondItem="CiE-wu-fuP" secondAttribute="trailing" id="aGl-Fx-kM0"/>
                             <constraint firstItem="CiE-wu-fuP" firstAttribute="trailing" secondItem="g2S-yD-DKD" secondAttribute="trailing" constant="20" id="bTt-Mo-Zdr"/>
                             <constraint firstItem="S0n-zc-Gz9" firstAttribute="top" secondItem="CiE-wu-fuP" secondAttribute="top" constant="9" id="d0E-60-JlL"/>
                             <constraint firstItem="pXE-bB-kqQ" firstAttribute="top" secondItem="CiE-wu-fuP" secondAttribute="top" id="ewv-Qp-iuM"/>
                             <constraint firstItem="wTs-JB-7xp" firstAttribute="leading" secondItem="CiE-wu-fuP" secondAttribute="leading" constant="20" id="fxW-0N-8CR"/>
                             <constraint firstItem="g2S-yD-DKD" firstAttribute="top" secondItem="3vi-AD-TOI" secondAttribute="top" constant="26" id="iar-c1-3eL"/>
+                            <constraint firstItem="CiE-wu-fuP" firstAttribute="bottom" secondItem="mz8-2O-hg6" secondAttribute="bottom" id="rDO-dC-hFK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="CiE-wu-fuP"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <toolbarItems>
                         <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="Xg7-zy-A1e"/>
                         <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="6mq-yh-ZuY"/>
@@ -187,11 +191,11 @@
             </objects>
             <point key="canvasLocation" x="374" y="1238"/>
         </scene>
-        <!--Explore Events Collection View Controller-->
+        <!--Explore-->
         <scene sceneID="gVB-Pm-0CT">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ctd-Cl-lKW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <collectionViewController id="Eit-Pu-OAt" customClass="ExploreEventsCollectionViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="exploreEventsCollection" id="Eit-Pu-OAt" customClass="ExploreEventsCollectionViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Xdc-1W-dGg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -203,7 +207,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ZbK-QA-5Zi" customClass="ExploreEventCollectionViewCell" customModule="LynxApp" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ExploreEventCell" id="ZbK-QA-5Zi" customClass="ExploreEventCollectionViewCell" customModule="LynxApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -217,7 +221,7 @@
                             <outlet property="delegate" destination="Eit-Pu-OAt" id="GW6-U3-7r1"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="qX6-m2-PUK" customClass="ExploreEventsCollectionViewController"/>
+                    <navigationItem key="navigationItem" title="Explore" id="qX6-m2-PUK" customClass="ExploreEventsCollectionViewController"/>
                 </collectionViewController>
             </objects>
             <point key="canvasLocation" x="3762" y="245"/>
@@ -620,7 +624,7 @@
         <scene sceneID="e8p-DK-Lol">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eh1-X5-qo1" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="I8G-ej-9nf" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="exploreEventsNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="I8G-ej-9nf" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IRR-93-5p4">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
