--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -201,19 +201,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Mva-C7-ns1">
-                            <size key="itemSize" width="50" height="50"/>
+                            <size key="itemSize" width="200" height="200"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ExploreEventCell" id="ZbK-QA-5Zi" customClass="ExploreEventCollectionViewCell" customModule="LynxApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="exploreEventCell" id="ZbK-QA-5Zi" customClass="ExploreEventCollectionViewCell" customModule="LynxApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hyF-O1-7xc">
+                                            <rect key="frame" x="8" y="8" width="184" height="184"/>
+                                        </imageView>
+                                    </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="trailing" secondItem="ZbK-QA-5Zi" secondAttribute="trailingMargin" id="7De-v1-OGY"/>
+                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="top" secondItem="ZbK-QA-5Zi" secondAttribute="topMargin" id="8f2-MT-w5I"/>
+                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="leading" secondItem="ZbK-QA-5Zi" secondAttribute="leadingMargin" id="VDg-92-qgy"/>
+                                    <constraint firstItem="hyF-O1-7xc" firstAttribute="bottom" secondItem="ZbK-QA-5Zi" secondAttribute="bottomMargin" id="cVX-A5-fbO"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="categoryImageView" destination="hyF-O1-7xc" id="Nfk-wR-AMo"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -224,7 +238,7 @@
                     <navigationItem key="navigationItem" title="Explore" id="qX6-m2-PUK" customClass="ExploreEventsCollectionViewController"/>
                 </collectionViewController>
             </objects>
-            <point key="canvasLocation" x="3762" y="245"/>
+            <point key="canvasLocation" x="3760.8695652173915" y="244.56521739130437"/>
         </scene>
         <!--Active Events Table View Controller-->
         <scene sceneID="0YY-iO-Wgr">
