--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -133,30 +133,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="old-9w-9iN">
-                                <rect key="frame" x="23.666666666666657" y="297.66666666666669" width="366.66666666666674" height="141.33333333333331"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="old-9w-9iN">
+                                <rect key="frame" x="24" y="323" width="367" height="91"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Foresight Logo Final" translatesAutoresizingMaskIntoConstraints="NO" id="a6B-pi-d7f">
-                                        <rect key="frame" x="9.3333333333333428" y="0.0" width="348" height="108"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="a6B-pi-d7f" secondAttribute="height" multiplier="29:9" id="T6p-Cx-beK"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="foresight is a sports, poltics and culture prediction market" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fF-o8-Hb3">
-                                        <rect key="frame" x="52.333333333333314" y="127.99999999999999" width="262" height="13.333333333333329"/>
-                                        <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="10"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WLO-Xq-HGL">
+                                        <rect key="frame" x="0.0" y="0.0" width="367" height="44.666666666666664"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foresight-white" translatesAutoresizingMaskIntoConstraints="NO" id="a6B-pi-d7f">
+                                                <rect key="frame" x="0.0" y="0.0" width="367" height="44.666666666666664"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="a6B-pi-d7f" secondAttribute="height" multiplier="74:9" id="T6p-Cx-beK"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="MER-W9-IKv">
+                                        <rect key="frame" x="4" y="48.666666666666686" width="359" height="42.333333333333343"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Crowdsourcing perspectives on global matters" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fF-o8-Hb3">
+                                                <rect key="frame" x="0.0" y="0.0" width="359" height="22.333333333333332"/>
+                                                <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="17"/>
+                                                <color key="textColor" red="0.65490196078431373" green="0.61176470588235299" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Swipe left to learn more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IfV-xG-znS">
+                                                <rect key="frame" x="0.0" y="28.333333333333314" width="359" height="14"/>
+                                                <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="15"/>
+                                                <color key="textColor" red="0.40392156862745099" green="0.38039215686274508" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" translatesAutoresizingMaskIntoConstraints="NO" id="QIz-pm-2iw">
+                                <rect key="frame" x="155" y="270" width="102" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="MgS-EV-POC"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.98056789340101524" green="0.98056789340101524" blue="0.98056789340101524" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.12549019607843137" green="0.12549019607843137" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
+                            <constraint firstItem="old-9w-9iN" firstAttribute="top" secondItem="QIz-pm-2iw" secondAttribute="bottom" constant="18" id="4ZQ-al-CaY"/>
                             <constraint firstItem="old-9w-9iN" firstAttribute="centerY" secondItem="wge-gi-0mh" secondAttribute="centerY" id="C5T-Pn-XBN"/>
                             <constraint firstItem="NOa-5o-SN3" firstAttribute="trailing" secondItem="old-9w-9iN" secondAttribute="trailing" constant="23.670000000000002" id="JOl-Ca-h6X"/>
                             <constraint firstItem="old-9w-9iN" firstAttribute="centerX" secondItem="wge-gi-0mh" secondAttribute="centerX" id="Q7v-DP-SSw"/>
                             <constraint firstItem="old-9w-9iN" firstAttribute="leading" secondItem="NOa-5o-SN3" secondAttribute="leading" constant="23.670000000000002" id="SD2-zL-iKF"/>
+                            <constraint firstItem="QIz-pm-2iw" firstAttribute="leading" secondItem="NOa-5o-SN3" secondAttribute="leading" constant="155" id="hEj-wG-mVu"/>
+                            <constraint firstItem="NOa-5o-SN3" firstAttribute="trailing" secondItem="QIz-pm-2iw" secondAttribute="trailing" constant="157" id="mOs-CH-ztB"/>
+                            <constraint firstItem="QIz-pm-2iw" firstAttribute="top" secondItem="NOa-5o-SN3" secondAttribute="top" constant="250" id="wZm-zG-BWk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NOa-5o-SN3"/>
                     </view>
@@ -166,7 +192,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kGZ-iV-w1M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="345" y="492"/>
+            <point key="canvasLocation" x="343.47826086956525" y="491.57608695652175"/>
         </scene>
         <!--Login Page View Controller-->
         <scene sceneID="LYO-iz-R5X">
@@ -194,7 +220,6 @@
         <!--Explore-->
         <scene sceneID="gVB-Pm-0CT">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ctd-Cl-lKW" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <collectionViewController storyboardIdentifier="exploreEventsCollection" id="Eit-Pu-OAt" customClass="ExploreEventsCollectionViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Xdc-1W-dGg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
@@ -238,6 +263,7 @@
                     </collectionView>
                     <navigationItem key="navigationItem" title="Explore" id="qX6-m2-PUK" customClass="ExploreEventsCollectionViewController"/>
                 </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ctd-Cl-lKW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3760.8695652173915" y="244.56521739130437"/>
         </scene>
@@ -586,6 +612,13 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YgP-Yw-TkE">
+                                <rect key="frame" x="153" y="547" width="108" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" keyboardAppearance="alert"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.12549019607843137" green="0.12549019607843137" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
@@ -633,12 +666,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r43-NK-JBm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5639" y="245"/>
+            <point key="canvasLocation" x="5637.68115942029" y="244.56521739130437"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="e8p-DK-Lol">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Eh1-X5-qo1" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController storyboardIdentifier="exploreEventsNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="I8G-ej-9nf" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IRR-93-5p4">
@@ -650,13 +682,15 @@
                         <segue destination="Eit-Pu-OAt" kind="relationship" relationship="rootViewController" id="d20-gA-FgB"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Eh1-X5-qo1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2891" y="245"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Foresight Logo Final" width="348" height="108"/>
         <image name="back-white" width="173" height="293"/>
+        <image name="eye" width="1070" height="610"/>
+        <image name="foresight-white" width="1070" height="330"/>
         <image name="profile" width="160" height="210"/>
         <image name="settings" width="190" height="190"/>
         <image name="trophy" width="200" height="260"/>
